--- a/Week2/Bronze/css/styles.css
+++ b/Week2/Bronze/css/styles.css
@@ -97,7 +97,7 @@ ul{
 	clear: left;
 }
 #feature {
-	background-image: url(../../Gold/img/GDA.png);
+	background-image: url(../../Bronze/img/GDA.png);
 	background-repeat: no-repeat;
 	background-position: center center;
 	height: 200px;
